--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,9 +15,8 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
-  issues: write
-  pull-requests: write
+  contents: write
+  dependency-graph: write
 
 jobs:
   build:
