check argument added to spotless

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
                 <executions>
                     <execution>
                         <goals>
+                            <goal>check</goal>
                             <goal>apply</goal>
                         </goals>
                     </execution>
