--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,3 +33,33 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+  checkstyle:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '22'
+
+      - name: Install dependencies and run Checkstyle
+        run: mvn checkstyle:check
+
+  spotless-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '22'
+
+      - name: Install dependencies and run Spotless check
+        run: mvn spotless:check
+
